프로젝트 생성 API 추가 및 Abstract Class 추가
