# src/main/java/kr/co/inslab/model/Member.java
@@ -1,16 +1,19 @@
 package kr.co.inslab.model;
 
+import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
 import org.springframework.validation.annotation.Validated;
-
-import java.util.Objects;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
 
 /**
  * Member
  */
 @Validated
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2020-03-16T13:03:06.511+09:00[Asia/Seoul]")
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2020-03-16T20:29:52.045+09:00[Asia/Seoul]")
 public class Member   {
   @JsonProperty("user_id")
   private String userId = null;
@@ -21,6 +24,9 @@ public class Member   {
   @JsonProperty("email")
   private String email = null;
 
+  @JsonProperty("email_verified")
+  private Boolean emailVerified = null;
+
   public Member userId(String userId) {
     this.userId = userId;
     return this;
@@ -29,10 +35,10 @@ public class Member   {
   /**
    * Get userId
    * @return userId
-   **/
+  **/
   @ApiModelProperty(value = "")
-
-  public String getUserId() {
+  
+    public String getUserId() {
     return userId;
   }
 
@@ -48,10 +54,10 @@ public class Member   {
   /**
    * Get userName
    * @return userName
-   **/
+  **/
   @ApiModelProperty(value = "")
-
-  public String getUserName() {
+  
+    public String getUserName() {
     return userName;
   }
 
@@ -67,15 +73,34 @@ public class Member   {
   /**
    * Get email
    * @return email
-   **/
+  **/
   @ApiModelProperty(value = "")
-
-  public String getEmail() {
+  
+    public String getEmail() {
     return email;
   }
 
   public void setEmail(String email) {
     this.email = email;
+  }
+
+  public Member emailVerified(Boolean emailVerified) {
+    this.emailVerified = emailVerified;
+    return this;
+  }
+
+  /**
+   * Get emailVerified
+   * @return emailVerified
+  **/
+  @ApiModelProperty(value = "")
+  
+    public Boolean isEmailVerified() {
+    return emailVerified;
+  }
+
+  public void setEmailVerified(Boolean emailVerified) {
+    this.emailVerified = emailVerified;
   }
 
 
@@ -89,23 +114,25 @@ public class Member   {
     }
     Member member = (Member) o;
     return Objects.equals(this.userId, member.userId) &&
-            Objects.equals(this.userName, member.userName) &&
-            Objects.equals(this.email, member.email);
+        Objects.equals(this.userName, member.userName) &&
+        Objects.equals(this.email, member.email) &&
+        Objects.equals(this.emailVerified, member.emailVerified);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(userId, userName, email);
+    return Objects.hash(userId, userName, email, emailVerified);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
     sb.append("class Member {\n");
-
+    
     sb.append("    userId: ").append(toIndentedString(userId)).append("\n");
     sb.append("    userName: ").append(toIndentedString(userName)).append("\n");
     sb.append("    email: ").append(toIndentedString(email)).append("\n");
+    sb.append("    emailVerified: ").append(toIndentedString(emailVerified)).append("\n");
     sb.append("}");
     return sb.toString();
   }
